# rdmo-plugins-generic-search

./: .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml
rdmo_generic_instrument_search/: apps.py  client.py  config.toml  config_utils.py
rdmo_generic_instrument_search/handlers/: base.py  factory.py  generic.py  parser.py  registry.py
rdmo_generic_instrument_search/providers/: __init__.py  base.py  factory.py  from_static.py  interfaces.py  meta.py  recipe.py  registry.py
rdmo_generic_instrument_search/providers/transforms/: b2inst.py  o2aregistry.py  pidinst.py  wikidata.py
rdmo_generic_instrument_search/signals/: handler_post_save.py  signal_handlers.py  utils.py  value_updater.py
xml/: catalog.xml  options.xml
