[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "rdmo-plugins-generic-instrument-search"
license = {text = "Apache-2.0"}
authors = [
  {name = "RDMO. Research Data Management Organiser e.V.", email = "rdmo-contact@listserv.dfn.de"},
]
description = "A generic OptionSet Provider Plugin to search for instruments."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "jmespath>=1.0.1",
    "requests>=2.31",
	"tomli>=2.0.1;python_version<'3.11'"
]


[project.urls]
repository = "https://github.com/rdmorganiser/rdmo-plugins-generic-instrument-search"

[tool.setuptools]
packages = ["rdmo_generic_instrument_search"]

[tool.setuptools.dynamic]
version = {attr = "rdmo_generic_instrument_search.__version__"}

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "B006",   # mutable-argument-default
  "B007",   # unused-loop-control-variable
  "B018",   # useless-expression
  "RUF012", # mutable-class-default
]

[tool.ruff.isort]
section-order = [
  "future",
  "standard-library",
  "pytest",
  "django",
  "rest_framework",
  "third-party",
  "rdmo",
  "first-party",
  "local-folder"
]

[tool.ruff.isort.sections]
pytest = ["pytest"]
django = ["django"]
rest_framework = ["rest_framework"]
rdmo = ["rdmo"]
